--- a/starter/Vagrantfile
+++ b/starter/Vagrantfile
@@ -14,7 +14,7 @@ Vagrant.configure("2") do |config|
   (1..NodeCount).each do |i|
     config.vm.define "node#{i}" do |node|
       # Use any version shown here https://app.vagrantup.com/opensuse/boxes/Leap-15.4.x86_64
-      config.vm.box = "opensuse/Leap-15.4.x86_64"
+      config.vm.box = "hashicorp/bionic64"
       config.vm.box_version = "15.4.13.7"
       # Run ifconfig or ip a to find the appropriate interface
       config.vm.network "public_network", :adapter=>3, bridge: "br1"
